feat(agentic-ai): Implement provider configuration (Phase F)